--- a/N Puzzle/packages.config
+++ b/N Puzzle/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DiffSharp" version="0.7.7" targetFramework="net46" />
+  <package id="DynamicInterop" version="0.7.4" targetFramework="net46" />
   <package id="FSharp.Charting" version="0.90.13" targetFramework="net46" />
   <package id="FSharp.Quotations.Evaluator" version="1.0.6" targetFramework="net46" />
+  <package id="ManagedCuda-75-Standalone" version="7.5.7" targetFramework="net46" />
+  <package id="ManagedCuda-75-x64" version="7.5.7" targetFramework="net46" />
+  <package id="ManagedCuda-CudaDNN" version="3.0" targetFramework="net46" />
+  <package id="R.NET.Community" version="1.6.4" targetFramework="net46" />
+  <package id="R.NET.Community.FSharp" version="1.6.4" targetFramework="net46" />
+  <package id="RProvider" version="1.1.15" targetFramework="net46" />
 </packages>
